# pyimap-structure

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml  requirements.txt
imap_structure/: body_structure.py  metadata.py  parser.py
